2006-01-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed resurrection bug -- using (e.g.) Death Bolt
	  resulted in a body which would not be resurrected, unlike what
	  happened in the original.
	* gamedat.cc: Fixed errors on restoring from multimap savegame
	  or initgame.
	
2006-01-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/intrinsics.cc: Virtue stones should use the map number
	  they are in, not of the map being displayed.

2006-01-14    <jeff@mini.nerble.net>

	* exult.cc: "Combo" selection is now done with single-clicking or
	dragging.  Shapes added are selected, and one can toggle by
	holding down the Control key.  Flat tiles are no longer added.

2006-01-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed cache-out bug which prevented eggs from reseting when
	  teleporting between maps.
	* usecode/intrinsics.cc: Multimap support for display_area
	  intrinsic.

2006-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc: Checking for the existance of ireg files before saving
	  them to zip files prevents crashes when saving new maps for existing
	  games.
	* gamemap.cc, objs/virtstone.*, usecode/intrinsics.cc, ucinternal.*:
	  Added multimap support to the following intrinsics:
		update_last_created & move_object (if the location is a 4-element
		array, the 4th element is the map #);
		mark_virtue_stone & recall_virtue_stone (now save/restore the map #);
		save_pos & teleport_to_saved_pos (now save/restore the map #).
	  Virtue stones from older save games still work, and so will (I hope)
	  the saved positions from older SI saves.

2006-01-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.h: get_usecode now returns correct value for NPCs with no
	  assigned usecode *and* with a shape# >1023.
	* objs.h: added a virtual get_usecode function which returns correct
	  usecode function for a given shape.
	* usecode/intrinsics.cc, etc.: added new intrinsic to get an object's